--- a/news-mobile-app/Base.lproj/Main.storyboard
+++ b/news-mobile-app/Base.lproj/Main.storyboard
@@ -1,24 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Articles View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ArticlesViewController" customModule="news_mobile_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KfA-2c-PSU">
+                                <rect key="frame" x="0.0" y="98" width="422" height="798"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleCell" rowHeight="422" id="HHX-td-tTY" customClass="ArticleCell" customModule="news_mobile_app" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="422" height="422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HHX-td-tTY" id="aiX-nq-u23">
+                                            <rect key="frame" x="0.0" y="0.0" width="422" height="422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="source" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSh-OQ-ln3" userLabel="source">
+                                                    <rect key="frame" x="20" y="219" width="382" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="382" id="qcc-P4-ifE"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfa-ka-hpz" userLabel="title">
+                                                    <rect key="frame" x="20" y="248" width="382" height="29"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzl-pv-rZk" userLabel="subtitle">
+                                                    <rect key="frame" x="20" y="295" width="382" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="publishDate" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2om-mu-1so" userLabel="publishDate">
+                                                    <rect key="frame" x="197" y="390" width="205" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eiq-7H-GnB">
+                                                    <rect key="frame" x="0.0" y="0.0" width="415" height="211"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="211" id="1nG-ys-oFv"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yk8-eV-5yM" userLabel="author">
+                                                    <rect key="frame" x="20" y="386" width="48.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wSh-OQ-ln3" firstAttribute="leading" secondItem="cfa-ka-hpz" secondAttribute="leading" id="C3f-C0-xfg"/>
+                                                <constraint firstItem="wSh-OQ-ln3" firstAttribute="leading" secondItem="aiX-nq-u23" secondAttribute="leadingMargin" id="Ek2-DL-uzy"/>
+                                                <constraint firstItem="wSh-OQ-ln3" firstAttribute="leading" secondItem="yk8-eV-5yM" secondAttribute="leading" id="Eo2-4t-s8V"/>
+                                                <constraint firstItem="Eiq-7H-GnB" firstAttribute="top" secondItem="aiX-nq-u23" secondAttribute="topMargin" constant="-11" id="GH3-Ux-Wcx"/>
+                                                <constraint firstItem="wSh-OQ-ln3" firstAttribute="trailing" secondItem="qzl-pv-rZk" secondAttribute="trailing" id="KjN-2c-7eZ"/>
+                                                <constraint firstItem="qzl-pv-rZk" firstAttribute="top" secondItem="cfa-ka-hpz" secondAttribute="bottom" constant="18" id="MoU-YS-5QC"/>
+                                                <constraint firstItem="cfa-ka-hpz" firstAttribute="top" secondItem="wSh-OQ-ln3" secondAttribute="bottom" constant="8" id="Yda-43-6pB"/>
+                                                <constraint firstItem="yk8-eV-5yM" firstAttribute="top" secondItem="qzl-pv-rZk" secondAttribute="bottom" constant="74" id="jS9-ZP-K1d"/>
+                                                <constraint firstItem="wSh-OQ-ln3" firstAttribute="top" secondItem="Eiq-7H-GnB" secondAttribute="bottom" constant="8" id="k7k-a7-LOz"/>
+                                                <constraint firstItem="wSh-OQ-ln3" firstAttribute="leading" secondItem="qzl-pv-rZk" secondAttribute="leading" id="lQ7-Lr-ike"/>
+                                                <constraint firstItem="wSh-OQ-ln3" firstAttribute="trailing" secondItem="cfa-ka-hpz" secondAttribute="trailing" id="oWs-6w-5Dt"/>
+                                                <constraint firstAttribute="trailing" secondItem="Eiq-7H-GnB" secondAttribute="trailing" constant="7" id="sZC-fJ-AOX"/>
+                                                <constraint firstItem="Eiq-7H-GnB" firstAttribute="leading" secondItem="aiX-nq-u23" secondAttribute="leading" id="xKC-C5-4WT"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                        <connections>
+                                            <outlet property="articleImage" destination="Eiq-7H-GnB" id="G6A-fB-dT4"/>
+                                            <outlet property="author" destination="yk8-eV-5yM" id="JKF-Yi-Kk0"/>
+                                            <outlet property="publishDate" destination="2om-mu-1so" id="Lnd-9U-asX"/>
+                                            <outlet property="source" destination="wSh-OQ-ln3" id="KRk-b7-t7U"/>
+                                            <outlet property="subtitle" destination="qzl-pv-rZk" id="sns-OA-mYj"/>
+                                            <outlet property="title" destination="cfa-ka-hpz" id="6Ic-YJ-MXk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="articlesTable" destination="KfA-2c-PSU" id="hWt-CA-Oz8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="90.401785714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
